--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
-      <h3>I'm in the App Component</h3>
-      <hr>
-      <app-servers></app-servers>
-      <!-- <div app-servers></div> -->
-      <!-- <div class="app-servers"></div> -->
-      <hr>
-      <app-warning-alert></app-warning-alert>
-      <app-success-alert></app-success-alert>
+    <div class="col-md-12">
+      <h2 >I'm in the App Component</h2>
     </div>
   </div>
 </div>
